tests/ui/abi/cannot-be-called.riscv64.stderr
warning: the calling convention "msp430-interrupt" is not supported on this target
  --> $DIR/cannot-be-called.rs:60:18
   |
LL | fn msp430_ptr(f: extern "msp430-interrupt" fn()) {
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #130260 <https://github.com/rust-lang/rust/issues/130260>
   = note: `#[warn(unsupported_fn_ptr_calling_conventions)]` on by default

warning: the calling convention "avr-interrupt" is not supported on this target
  --> $DIR/cannot-be-called.rs:67:15
   |
LL | fn avr_ptr(f: extern "avr-interrupt" fn()) {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #130260 <https://github.com/rust-lang/rust/issues/130260>

warning: the calling convention "x86-interrupt" is not supported on this target
  --> $DIR/cannot-be-called.rs:88:15
   |
LL | fn x86_ptr(f: extern "x86-interrupt" fn()) {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #130260 <https://github.com/rust-lang/rust/issues/130260>

error[E0570]: `"msp430-interrupt"` is not a supported ABI for the current target
  --> $DIR/cannot-be-called.rs:36:1
   |
LL | extern "msp430-interrupt" fn msp430() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0570]: `"avr-interrupt"` is not a supported ABI for the current target
  --> $DIR/cannot-be-called.rs:38:1
   |
LL | extern "avr-interrupt" fn avr() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0570]: `"x86-interrupt"` is not a supported ABI for the current target
  --> $DIR/cannot-be-called.rs:44:1
   |
LL | extern "x86-interrupt" fn x86() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: functions with the "riscv-interrupt-m" ABI cannot be called
  --> $DIR/cannot-be-called.rs:52:5
   |
LL |     riscv_m();
   |     ^^^^^^^^^
   |
note: an `extern "riscv-interrupt-m"` function can only be called using inline assembly
  --> $DIR/cannot-be-called.rs:52:5
   |
LL |     riscv_m();
   |     ^^^^^^^^^

error: functions with the "riscv-interrupt-s" ABI cannot be called
  --> $DIR/cannot-be-called.rs:54:5
   |
LL |     riscv_s();
   |     ^^^^^^^^^
   |
note: an `extern "riscv-interrupt-s"` function can only be called using inline assembly
  --> $DIR/cannot-be-called.rs:54:5
   |
LL |     riscv_s();
   |     ^^^^^^^^^

error: functions with the "riscv-interrupt-m" ABI cannot be called
  --> $DIR/cannot-be-called.rs:77:5
   |
LL |     f()
   |     ^^^
   |
note: an `extern "riscv-interrupt-m"` function can only be called using inline assembly
  --> $DIR/cannot-be-called.rs:77:5
   |
LL |     f()
   |     ^^^

error: functions with the "riscv-interrupt-s" ABI cannot be called
  --> $DIR/cannot-be-called.rs:84:5
   |
LL |     f()
   |     ^^^
   |
note: an `extern "riscv-interrupt-s"` function can only be called using inline assembly
  --> $DIR/cannot-be-called.rs:84:5
   |
LL |     f()
   |     ^^^

error: aborting due to 7 previous errors; 3 warnings emitted

For more information about this error, try `rustc --explain E0570`.
Future incompatibility report: Future breakage diagnostic:
warning: the calling convention "msp430-interrupt" is not supported on this target
  --> $DIR/cannot-be-called.rs:60:18
   |
LL | fn msp430_ptr(f: extern "msp430-interrupt" fn()) {
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #130260 <https://github.com/rust-lang/rust/issues/130260>
   = note: `#[warn(unsupported_fn_ptr_calling_conventions)]` on by default

Future breakage diagnostic:
warning: the calling convention "avr-interrupt" is not supported on this target
  --> $DIR/cannot-be-called.rs:67:15
   |
LL | fn avr_ptr(f: extern "avr-interrupt" fn()) {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #130260 <https://github.com/rust-lang/rust/issues/130260>
   = note: `#[warn(unsupported_fn_ptr_calling_conventions)]` on by default

Future breakage diagnostic:
warning: the calling convention "x86-interrupt" is not supported on this target
  --> $DIR/cannot-be-called.rs:88:15
   |
LL | fn x86_ptr(f: extern "x86-interrupt" fn()) {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #130260 <https://github.com/rust-lang/rust/issues/130260>
   = note: `#[warn(unsupported_fn_ptr_calling_conventions)]` on by default

